--- a/index.html
+++ b/index.html
@@ -3,48 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asta Personaggi Ape Escape 2</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Ape Escape 2 Monkey Football - Asta Personaggi</title>
+    <link rel="stylesheet" href="/game-character-auction/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Asta Personaggi Ape Escape 2</h1>
-        <div id="player-info">
-            <label for="player-name-input">Inserisci il tuo nome:</label>
-            <input type="text" id="player-name-input" placeholder="Nome giocatore">
-            <button onclick="setPlayerName()">Conferma Nome</button>
-            <p>Giocatore: <span id="player-name">Nessuno</span> | Crediti: <span id="credits">5000</span></p>
-        </div>
-        <div id="bidding-section">
-            <h2>Fai le tue Offerte</h2>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Nome</th>
-                        <th>Posizione</th>
-                        <th>Total</th>
-                        <th>Speed</th>
-                        <th>Kick</th>
-                        <th>Heading</th>
-                        <th>Sliding</th>
-                        <th>Technique</th>
-                        <th>Stamina</th>
-                        <th>Strength</th>
-                        <th>Catching</th>
-                        <th>Offerta</th>
-                    </tr>
-                </thead>
-                <tbody id="characters"></tbody>
-            </table>
-            <button onclick="saveBids()" id="save-bids-btn" disabled>Salva Offerte (JSON)</button>
-        </div>
-        <div id="results-section">
-            <h2>Determina Vincitori</h2>
-            <input type="file" id="json-files" multiple accept=".json">
-            <button onclick="loadAndCompareBids()">Carica e Confronta Offerte</button>
-            <div id="auction-results"></div>
-        </div>
+    <h1>Ape Escape 2 Monkey Football - Asta Personaggi</h1>
+    <div>
+        <label for="player-name-input">Nome Giocatore:</label>
+        <input type="text" id="player-name-input">
+        <button onclick="setPlayerName()">Imposta Nome</button>
     </div>
-    <script src="script.js"></script>
+    <div>
+        <p><strong>Nome:</strong> <span id="player-name">Nessuno</span></p>
+        <p><strong>Banane:</strong> <span id="credits">0</span></p>
+    </div>
+    <div>
+        <label for="position-filter">Filtra per Posizione:</label>
+        <select id="position-filter" onchange="filterCharacters()">
+            <option value="">Tutte</option>
+            <option value="Keeper">Portiere</option>
+            <option value="Defender">Difensore</option>
+            <option value="Midfield">Centrocampista</option>
+            <option value="Striker">Attaccante</option>
+        </select>
+        <label for="name-filter">Cerca per Nome:</label>
+        <input type="text" id="name-filter" oninput="filterCharacters()" placeholder="Inserisci nome...">
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Posizione</th>
+                <th>Totale</th>
+                <th>Velocità</th>
+                <th>Potenza Tiro</th>
+                <th>Colpo di Testa</th>
+                <th>Scivolata</th>
+                <th>Tecnica</th>
+                <th>Resistenza</th>
+                <th>Forza</th>
+                <th>Presa</th>
+                <th>Offerta (Banane)</th>
+            </tr>
+        </thead>
+        <tbody id="characters"></tbody>
+    </table>
+    <button id="save-bids-btn" onclick="saveBids()" disabled>Salva Offerte</button>
+    <div>
+        <h2>Carica Offerte</h2>
+        <input type="file" id="json-files" accept=".json" multiple>
+        <button onclick="loadAndCompareBids()">Confronta Offerte</button>
+    </div>
+    <div id="auction-results"></div>
+    <script src="/game-character-auction/script.js"></script>
 </body>
 </html>
