--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ape Escape 2 Monkey Football - Asta Personaggi</title>
-    <link rel="stylesheet" href="/game-character-auction/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Ape Escape 2 Monkey Football - Asta Personaggi</h1>
@@ -55,6 +55,6 @@
         <button onclick="loadAndCompareBids()">Confronta Offerte</button>
     </div>
     <div id="auction-results"></div>
-    <script src="/game-character-auction/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
